--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,15 @@
   align-items: center;
 }
 
+.fade-in {
+animation: fadeIn 1s;
+}
+
+@keyframes fadeIn {
+    0%{ opacity: 0;}
+    100% {opacity: 1;}
+}
+
 
 .login {
   display: flex;
