--- a/src/App.css
+++ b/src/App.css
@@ -45,11 +45,7 @@ animation: fadeIn 1s;
   justify-content: space-between;
 }
 
-
-/*.nav {
-  display: flex;
-  flex-direction: row;
-  border-bottom: 1px solid black;
-  justify-content: space-between;
+#map {
+  width: 100%;
+  height: 500px;
 }
-*/
