--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,10 @@ animation: fadeIn 1s;
   width: 100%;
   height: 500px;
 }
+
+.popup p { margin-top: 5px; }
+
+.popup img {
+  max-width: 100%;
+  max-height: 100%;
+}
