--- a/src/App.css
+++ b/src/App.css
@@ -58,3 +58,8 @@ img {
   max-width: 100%;
   max-height: 100%;
 }
+
+.leaflet-popup-content-wrapper {
+  max-height: 20rem;
+  overflow-y:scroll;
+}
